tests/snapshots/sdk_serialization_snapshots__kimi__ir_from_kimi_messages.snap
---
source: tests/sdk_serialization_snapshots.rs
expression: ir
---
messages:
  - role: system
    content:
      - type: text
        text: Be concise.
  - role: user
    content:
      - type: text
        text: What is Rust?
