tests/snapshots/sdk_serialization_snapshots__kimi__receipt_to_response.snap
---
source: tests/sdk_serialization_snapshots.rs
expression: resp
---
{
  "id": "[id]",
  "model": "moonshot-v1-8k",
  "choices": [
    {
      "index": 0,
      "message": {
        "role": "assistant",
        "content": "Hello from the assistant."
      },
      "finish_reason": "stop"
    }
  ],
  "usage": {
    "prompt_tokens": 100,
    "completion_tokens": 50,
    "total_tokens": 150
  }
}
