tests/snapshots/sdk_serialization_snapshots__kimi__request_full.snap
---
source: tests/sdk_serialization_snapshots.rs
expression: req
---
{
  "model": "moonshot-v1-128k",
  "messages": [
    {
      "role": "system",
      "content": "You are a helpful assistant."
    },
    {
      "role": "user",
      "content": "Search for Rust tutorials"
    }
  ],
  "max_tokens": 4096,
  "temperature": 0.7,
  "stream": false,
  "tools": [
    {
      "type": "function",
      "function": {
        "name": "web_search",
        "description": "Search the web",
        "parameters": {
          "properties": {
            "q": {
              "type": "string"
            }
          },
          "type": "object"
        }
      }
    }
  ],
  "use_search": true
}
