tests/snapshots/sdk_serialization_snapshots__kimi__request_minimal.snap
---
source: tests/sdk_serialization_snapshots.rs
expression: req
---
{
  "model": "moonshot-v1-8k",
  "messages": [
    {
      "role": "user",
      "content": "Hello"
    }
  ]
}
