tests/snapshots/sdk_serialization_snapshots__kimi__request_streaming.snap
---
source: tests/sdk_serialization_snapshots.rs
expression: req
---
{
  "model": "moonshot-v1-8k",
  "messages": [
    {
      "role": "user",
      "content": "Stream response"
    }
  ],
  "stream": true
}
