tests/snapshots/sdk_serialization_snapshots__kimi__response_success.snap
---
source: tests/sdk_serialization_snapshots.rs
expression: resp
---
{
  "id": "cmpl-kimi-001",
  "model": "moonshot-v1-8k",
  "choices": [
    {
      "index": 0,
      "message": {
        "role": "assistant",
        "content": "Hello! How can I help?"
      },
      "finish_reason": "stop"
    }
  ],
  "usage": {
    "prompt_tokens": 10,
    "completion_tokens": 8,
    "total_tokens": 18
  }
}
