tests/snapshots/sdk_serialization_snapshots__kimi__stream_chunk_text.snap
---
source: tests/sdk_serialization_snapshots.rs
expression: chunk
---
{
  "id": "chunk-001",
  "object": "chat.completion.chunk",
  "created": 1700000000,
  "model": "moonshot-v1-8k",
  "choices": [
    {
      "index": 0,
      "delta": {
        "role": "assistant",
        "content": "Hello"
      },
      "finish_reason": null
    }
  ]
}
